--- a/my_list.html
+++ b/my_list.html
@@ -1,3 +1,3 @@
-"It is what it is"
-"nine plus ten god damn twenty one"
-"man i dont even know"
+<li>"It is what it is"</li>
+<li>"nine plus ten god damn twenty one"</li>
+<li>"man i dont even know"</li>
